--- a/style.css
+++ b/style.css
@@ -1,33 +1,3 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@subacitor 
-subacitor
-/
-wbsite
-Public
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-wbsite/style-new.css
-@subacitor
-subacitor Create style-new.css
-Latest commit 8594b94 3 minutes ago
- History
- 1 contributor
-347 lines (301 sloc)  6.05 KB
-
-
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Monoton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
@@ -60,6 +30,7 @@ body{
     display: none;
 }
 .drop-down-lv2-2{
+    background: #202222;
     display: none;
 }
 
@@ -374,17 +345,3 @@ body{
         flex-direction: column;
     }
 }
-.
-© 2022 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Loading complete
